swagger fixes, migration updates, admin user
